[package]
name = "keybd_event"
version = "0.1.2"
license = "MIT"
authors = ["micmonay <micmonay@gmail.com>"]
description = "Simulating keyboard on Linux, Windows and Mac OS in rust"
categories = ["os","simulation"]
repository = "https://github.com/micmonay/keybd_event-rs"
keywords    = ["keyboard", "simulation","simulat","keybd_event","uinput"]

[target.'cfg(target_os = "linux")'.dependencies]
uinput = "0.1.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.17.3"